<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.reset4.passlock.PasswordActivity">
    <item android:id="@+id/editAccount" android:title="@string/edit_account"
        android:orderInCategory="100" app:showAsAction="always" />
    <item android:id="@+id/copyUserId" android:title="@string/copy_userid"
        android:orderInCategory="200" app:showAsAction="always" />
    <item android:id="@+id/copyPassword" android:title="@string/copy_password"
        android:orderInCategory="300" app:showAsAction="always" />
    <item android:id="@+id/launchUrl" android:title="@string/launch_url"
        android:orderInCategory="400" app:showAsAction="always" />
</menu>
