<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".WelcomeActivity"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <com.reset4.passlock.ui.PLTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/database_question"
            app:fonts="RalewaySemiBold"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="17dp"
            />

        <com.reset4.passlock.ui.PLButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_new_database"
            android:layout_marginTop="15dp"
            android:onClick="redirectToCreateNewDatabase"/>

        <com.reset4.passlock.ui.PLButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restore_from_backup"
            android:layout_marginTop="8dp"
            android:onClick="redirectToRestoreDatabaseActivity"/>
    </LinearLayout>

</LinearLayout>
