<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:gravity="center">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/buttonLayout"
        android:layout_gravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/padlock"
                android:layout_marginTop="20dp"/>

            <com.reset4.passlock.ui.PLEditText
                android:id="@+id/masterPasswordEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="270dp"
                app:fonts="RalewaySemiBold"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="8dp"
                android:textSize="17dp"
                android:inputType="textPassword"
                android:hint="@string/enter_master_password"
                android:singleLine="true"
                android:maxLength="12"
                android:textAlignment="center"
                />

            <com.reset4.passlock.ui.PLTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/impossible_recover"
                app:fonts="RalewaySemiBold"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="8dp"
                android:textSize="17dp"
                />

            <com.reset4.passlock.ui.PLTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uninstall_warning"
                app:fonts="RalewaySemiBold"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="12dp"
                android:textSize="17dp"
                />
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:background="@color/lightGray">
        <com.reset4.passlock.ui.PLButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/open"
            android:onClick="openDatabase"/>
    </LinearLayout>
</RelativeLayout>
