<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".PasswordActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/buttonLayout"
        android:layout_gravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <com.reset4.passlock.ui.PLTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_name"
                app:fonts="RalewaySemiBold"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:textSize="18dp"
                android:gravity="left"
                android:layout_gravity="left"
                android:textColor="@color/colorPrimary"
                />

            <com.reset4.passlock.ui.PLEditText
                android:id="@+id/accountNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minWidth="270dp"
                app:fonts="RalewaySemiBold"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textSize="17dp"
                android:singleLine="true"
                />

            <com.reset4.passlock.ui.PLTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_id"
                app:fonts="RalewaySemiBold"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="8dp"
                android:textSize="18dp"
                android:gravity="left"
                android:layout_gravity="left"
                android:textColor="@color/colorPrimary"
                />

            <com.reset4.passlock.ui.PLEditText
                android:id="@+id/userIdEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minWidth="270dp"
                app:fonts="RalewaySemiBold"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textSize="17dp"
                android:singleLine="true"
                />

            <com.reset4.passlock.ui.PLTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                app:fonts="RalewaySemiBold"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="8dp"
                android:textSize="18dp"
                android:gravity="left"
                android:layout_gravity="left"
                android:textColor="@color/colorPrimary"
                />

            <com.reset4.passlock.ui.PLEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minWidth="270dp"
                app:fonts="RalewaySemiBold"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textSize="17dp"
                android:singleLine="true"
                />

            <com.reset4.passlock.ui.PLTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/url"
                app:fonts="RalewaySemiBold"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="8dp"
                android:textSize="18dp"
                android:gravity="left"
                android:layout_gravity="left"
                android:textColor="@color/colorPrimary"
                />

            <com.reset4.passlock.ui.PLEditText
                android:id="@+id/urlEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minWidth="270dp"
                app:fonts="RalewaySemiBold"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textSize="17dp"
                android:singleLine="true"
                android:inputType="textWebEmailAddress"
                android:autoLink="web"
                />

            <com.reset4.passlock.ui.PLTextView
                android:id="@+id/urlTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:fonts="RalewaySemiBold"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="8dp"
                android:textSize="17dp"
                android:gravity="left"
                android:layout_gravity="left"
                android:textColor="@color/colorPrimary"
                android:autoLink="web"
                android:linksClickable="true"
                />

            <com.reset4.passlock.ui.PLTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notes"
                app:fonts="RalewaySemiBold"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="8dp"
                android:textSize="18dp"
                android:gravity="left"
                android:layout_gravity="left"
                android:textColor="@color/colorPrimary"
                />

            <com.reset4.passlock.ui.PLEditText
                android:id="@+id/notesEditText"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:minWidth="270dp"
                app:fonts="RalewaySemiBold"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textSize="17dp"

                />


        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:background="@color/lightGray">
        <com.reset4.passlock.ui.PLButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/save"
            android:onClick="savePassword"/>
    </LinearLayout>
</RelativeLayout>
