<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".ChangePasswordActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/buttonLayout"
        android:layout_gravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <com.reset4.passlock.ui.PLTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/existing_master_password"
                app:fonts="RalewaySemiBold"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:textSize="18dp"
                android:gravity="left"
                android:layout_gravity="left"
                android:textColor="@color/colorPrimary"
                />

            <com.reset4.passlock.ui.PLEditText
                android:id="@+id/existingMasterPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minWidth="270dp"
                app:fonts="RalewaySemiBold"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textSize="17dp"
                android:singleLine="true"
                android:inputType="textPassword"
                />

            <com.reset4.passlock.ui.PLTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_master_password"
                app:fonts="RalewaySemiBold"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="8dp"
                android:textSize="18dp"
                android:gravity="left"
                android:layout_gravity="left"
                android:textColor="@color/colorPrimary"
                />

            <com.reset4.passlock.ui.PLEditText
                android:id="@+id/newMasterPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minWidth="270dp"
                app:fonts="RalewaySemiBold"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textSize="17dp"
                android:singleLine="true"
                android:inputType="textPassword"
                />

            <com.reset4.passlock.ui.PLTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_master_password_again"
                app:fonts="RalewaySemiBold"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="8dp"
                android:textSize="18dp"
                android:gravity="left"
                android:layout_gravity="left"
                android:textColor="@color/colorPrimary"
                />

            <com.reset4.passlock.ui.PLEditText
                android:id="@+id/newMasterPasswordAgainEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minWidth="270dp"
                app:fonts="RalewaySemiBold"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textSize="17dp"
                android:singleLine="true"
                android:inputType="textPassword"
                />

        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:background="@color/lightGray">
        <com.reset4.passlock.ui.PLButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/button_ok"
            android:onClick="changePassword"/>
    </LinearLayout>
</RelativeLayout>
